Revert "Fix leaflet-control alignment"
The commit message of this commit was correct but it seems I end up not
git adding the latest change which obviously is not initial but 1.

This reverts commit c80d4ca62ecbbcb2732c3a32898f6018594abf3c.

--- a/browser/css/leaflet.css
+++ b/browser/css/leaflet.css
@@ -139,7 +139,7 @@
 .leaflet-right .leaflet-control {
 	float: right;
 	margin-right: 10px;
-	line-height: initial;
+	line-height: 28px;
 
 }
 .leaflet-top .leaflet-control {
